--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -28,6 +28,7 @@ jobs:
     secrets: inherit
     with:
       codename: "zuma"
+      owner: "GavinFF-SS"
       repo: "android_kernel_google_zuma"
       android_version: "android14"
       kernel_version: "6.1"
@@ -37,6 +38,7 @@ jobs:
     secrets: inherit
     with:
       codename: "zumapro"
+      owner: "kerneltoast"
       repo: "android_kernel_google_zumapro"
       android_version: "android14"
       kernel_version: "6.1"
