--- a/.github/workflows/sultan.yml
+++ b/.github/workflows/sultan.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Set CONFIG Environment Variable
         run: |
           CONFIG="${{ inputs.repo }}"
+          CONFIG="${{ inputs.owner }}"
           
           # Set CONFIG as an environment variable for future steps
           echo "CONFIG=$CONFIG" >> $GITHUB_ENV
@@ -68,7 +69,7 @@ jobs:
           git checkout b5c3ada461a61c6ad033693b7a00494ead3a28fd
           cd ..
           git clone https://github.com/TheWildJames/kernel_patches.git
-          git clone https://github.com/kerneltoast/${{ inputs.repo }}
+          git clone https://github.com/${{ inputs.owner }}/${{ inputs.repo }}
       
       - name: Add KernelSU
         run: |
@@ -182,7 +183,7 @@ jobs:
           cd "$CONFIG"
           
           echo "Running sed commands..."
-          sed -i 's/CONFIG_LOCALVERSION="-Sultan"/CONFIG_LOCALVERSION="-Sultan-Wild"/' ./arch/arm64/configs/${{ inputs.codename }}_defconfig
+          sed -i 's/CONFIG_LOCALVERSION="-Sultan"/CONFIG_LOCALVERSION="-Sultan-Wild-FF"/' ./arch/arm64/configs/${{ inputs.codename }}_defconfig
 
       - name: Build the Kernel
         run: |
