--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -28,6 +28,7 @@ jobs:
     secrets: inherit
     with:
       codename: "zuma"
+      owner: "GavinFF-SS"
       repo: "android_kernel_google_zuma"
       android_version: "android14"
       kernel_version: "6.1"
@@ -37,6 +38,7 @@ jobs:
     secrets: inherit
     with:
       codename: "zumapro"
+      owner: "kerneltoast"
       repo: "android_kernel_google_zumapro"
       android_version: "android14"
       kernel_version: "6.1"
@@ -49,8 +51,8 @@ jobs:
         - build-kernel-zumapro
     if: ${{ inputs.make_release }}
     env:
-      REPO_OWNER: GavinFF-SS
-      REPO_NAME: Sultan_KernelSU_SUSFS_PWM
+      REPO_OWNER: TheWildJames
+      REPO_NAME: Sultan_KernelSU_SUSFS
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       RELEASE_NAME: "*TEST BUILD* Sultan Kernels With KernelSU Next & SUSFS v1.5.7 *TEST BUILD*"
       RELEASE_NOTES: |
