--- a/.github/workflows/sultan.yml
+++ b/.github/workflows/sultan.yml
@@ -12,6 +12,9 @@ on:
       repo:
         required: true
         type: string
+      owner:
+        required: true
+        type: string
       android_version:
         required: true
         type: string
