--- a/.github/workflows/sultan.yml
+++ b/.github/workflows/sultan.yml
@@ -70,8 +70,9 @@ jobs:
           git clone https://github.com/TheWildJames/kernel_patches.git
           if [ "${{ inputs.codename }}" == "zuma" ]; then
             git clone https://github.com/GavinFF-SS/${{ inputs.repo }}
+          elif [ "${{ inputs.codename }}" == "zumapro" ]; then
+            git clone https://github.com/kerneltoast/${{ inputs.repo }}
           fi
-          git clone https://github.com/kerneltoast/${{ inputs.repo }}
       
       - name: Add KernelSU
         run: |
