--- a/.github/workflows/sultan.yml
+++ b/.github/workflows/sultan.yml
@@ -185,8 +185,9 @@ jobs:
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
           
+          # Long localversion suffix(es).
           echo "Running sed commands..."
-          sed -i 's/CONFIG_LOCALVERSION="-Sultan"/CONFIG_LOCALVERSION="-Sultan-Wild-FF"/' ./arch/arm64/configs/${{ inputs.codename }}_defconfig
+          sed -i 's/CONFIG_LOCALVERSION="-Sultan-PWM-Mod"/CONFIG_LOCALVERSION="-Sultan-Wild-PWM-Mod-FF"/' ./arch/arm64/configs/${{ inputs.codename }}_defconfig
 
       - name: Build the Kernel
         run: |
