--- a/.github/workflows/sultan.yml
+++ b/.github/workflows/sultan.yml
@@ -101,13 +101,13 @@ jobs:
           patch -p1 --forward --fuzz=3 < 10_enable_susfs_for_ksu.patch || true
 
           echo "Applying next SUSFS Fix patches..."
-          cp ../../kernel_patches/next/fix_apk_sign.c.patch ./
+          cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_apk_sign.c.patch ./
           patch -p1 --forward --fuzz=3 < fix_apk_sign.c.patch
-          cp ../../kernel_patches/next/fix_core_hook.c.patch ./
+          cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_core_hook.c.patch ./
           patch -p1 --forward --fuzz=3 < fix_core_hook.c.patch
-          cp ../../kernel_patches/next/fix_selinux.c.patch ./
+          cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_selinux.c.patch ./
           patch -p1 --forward --fuzz=3 < fix_selinux.c.patch
-          cp ../../kernel_patches/next/fix_ksud.c.patch ./
+          cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_ksud.c.patch ./
           patch -p1 --forward --fuzz=3 < fix_ksud.c.patch
           cp ../../kernel_patches/next/fix_sucompat.c.patch ./
           patch -p1 --forward --fuzz=3 < fix_sucompat.c.patch
