--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -52,9 +52,9 @@ jobs:
       REPO_OWNER: GavinFF-SS
       REPO_NAME: Sultan_KernelSU_SUSFS_PWM
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      RELEASE_NAME: "*TEST BUILD* Sultan Kernels With KernelSU Next & SUSFS v1.5.7 *TEST BUILD*"
+      RELEASE_NAME: "*TEST BUILD* Sultan Kernels With KernelSU Next, SUSFS v1.5.9, and @updateing's PWM Mod (Pixel 8 Series Only) *TEST BUILD*"
       RELEASE_NOTES: |
-        This release contains KernelSU Next and SUSFS v1.5.7
+        This release contains KernelSU Next, SUSFS v1.5.9, and @updateing's PWM Mod
         
         Module: 
         -> https://github.com/sidex15/ksu_module_susfs
@@ -64,11 +64,12 @@ jobs:
         
         Features:
         [+] KernelSU-Next
-        [+] SUSFS v1.5.7
+        [+] SUSFS v1.5.9
         [+] Wireguard Support
         [+] Maphide LineageOS Detections
         [+] Futile Maphide for jit-zygote-cache Detections
         [+] Magic Mount Support
+        [+] Updateing's PWM Mod
 
     steps:
       # Checkout the code
