Removed PWM Mod 1/2
The main reason I removed it to anyone who cares is that it doesn't support A16 yet, and I don't really see it getting support in the foreseeable future. Although, I may just be acting pessimistic, as Sultan updated an hour ago, so until support is added, this is just a personal use that has a more updated SUSFS version.

--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -50,11 +50,11 @@ jobs:
     if: ${{ inputs.make_release }}
     env:
       REPO_OWNER: GavinFF-SS
-      REPO_NAME: Sultan_KernelSU_SUSFS_PWM
+      REPO_NAME: Sultan_KernelSU_SUSFS
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      RELEASE_NAME: "*TEST BUILD* Sultan Kernels With KernelSU Next, SUSFS v1.5.9, and @updateing's PWM Mod (Pixel 8 Series Only) *TEST BUILD*"
+      RELEASE_NAME: "*TEST BUILD* Sultan Kernels With KernelSU Next and SUSFS v1.5.9 *TEST BUILD*"
       RELEASE_NOTES: |
-        This release contains KernelSU Next, SUSFS v1.5.9, and @updateing's PWM Mod
+        This release contains KernelSU Next and SUSFS v1.5.9
         
         Module: 
         -> https://github.com/sidex15/ksu_module_susfs
@@ -69,7 +69,6 @@ jobs:
         [+] Maphide LineageOS Detections
         [+] Futile Maphide for jit-zygote-cache Detections
         [+] Magic Mount Support
-        [+] Updateing's PWM Mod
 
     steps:
       # Checkout the code
@@ -82,7 +81,7 @@ jobs:
             # Fetch the latest tag from GitHub (this is the latest tag based on the GitHub API)
             LATEST_TAG=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[0].name')
             if [ -z "$LATEST_TAG" ]; then
-              LATEST_TAG="v1.5.7-r0"  # Default to v1.5.7-0 if no tag exists
+              LATEST_TAG="v1.5.9-r0"  # Default to v1.5.7-0 if no tag exists
             fi
             
             # Increment the suffix (e.g., v1.5.7-0 becomes v1.5.7-1)
