--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -20,8 +20,8 @@ jobs:
     with:
       codename: "gs201"
       repo: "android_kernel_google_gs201"
-      android_version: "android13"
-      kernel_version: "5.10"
+      android_version: "android14"
+      kernel_version: "6.1"
       
   build-kernel-zuma:
     uses: ./.github/workflows/sultan.yml
@@ -44,7 +44,7 @@ jobs:
   trigger-release:
     runs-on: ubuntu-latest
     needs:
-       # - build-kernel-gs201
+        - build-kernel-gs201
         - build-kernel-zuma
         - build-kernel-zumapro
     if: ${{ inputs.make_release }}
@@ -52,7 +52,7 @@ jobs:
       REPO_OWNER: GavinFF-SS
       REPO_NAME: Sultan_KernelSU_SUSFS
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      RELEASE_NAME: "*TEST BUILD* Sultan Kernels With KernelSU Next and SUSFS v1.5.9 *TEST BUILD*"
+      RELEASE_NAME: "*TEST BUILD* Sultan Kernels With KernelSU Next & SUSFS v1.5.9 *TEST BUILD*"
       RELEASE_NOTES: |
         This release contains KernelSU Next and SUSFS v1.5.9
         
